--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
+    "jotai": "^2.15.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
