--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jotai": "^2.15.1",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "sass": "^1.94.0",
     "swiper": "^12.0.3"
   },
