--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint:unused": "eslint --ext .ts,.tsx src --fix"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jotai": "^2.15.1",
@@ -25,9 +24,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.5",
@@ -35,7 +36,9 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   },
   "browserslist": [
