--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intersection-observer": "^10.0.0",
+    "react-naver-maps": "^0.1.4",
     "sass": "^1.94.0",
     "swiper": "^12.0.3"
   },
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.5",
@@ -34,10 +36,9 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.5.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
     "typescript": "^5"
   },
   "browserslist": [
