--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "1.0.0",
+    "clsx": "^2.1.1",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.5",
     "eslint-plugin-prettier": "^5.5.4",
@@ -39,6 +40,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.4.38",
     "prettier": "^3.6.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   },
